kb/TLS-Cert_Automation/Sampleapp.yaml
# Deployment.yaml file
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rancher-demo
spec:
  replicas: 5
  selector:
    matchLabels:
      app.kubernetes.io/name: rancher-demo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: rancher-demo
    spec:
      containers:
      - image: monachus/rancher-demo:latest
        name: rancher-demo
---
#SERVICE file
apiVersion: v1
kind: Service
metadata:
  name: rancher-demo
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app.kubernetes.io/name: rancher-demo
  sessionAffinity: None
  type: ClusterIP
---
#_________________________________________________________________________
#Ingress
#without TLS initially
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: rancher-demo
#   annotations:
#     nginx.ingress.kubernetes.io/rewrite-target: /
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: testing.ot-xecm.com
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service: 
#             name: rancher-demo
#             port:
#               number: 80
#_________________________________________________________________________
